fix: added padding style to main section to fix education/skills overlap

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,7 +22,7 @@ li#links{
 }
 
 #move{
-  padding-top: 25px;
+  padding-top: 18px;
   float: left;
 }
 
@@ -41,6 +41,10 @@ aside .inner, main .inner {
   background: #fff;
   padding: 20px;
 }
+main .inner {
+  padding-bottom: 250px;
+}
+
 h1 {
   font-size: 24px;
   margin-bottom: 0;
